[package]
name = "tmou-mapa-backend"
version = "0.1.0"
authors = ["Mila Votradovec <me@milavotradovec.cz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
roxmltree = "0.13.0"
itertools = "0.9.0"
