[package]
name = "tmou-mapa-backend"
version = "0.1.0"
authors = ["Mila Votradovec <me@milavotradovec.cz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
rocket = "0.4.5"
rocket_contrib = {version = "0.4.5", default_features = false, features= ["tera_templates", "serve", "json", "diesel_postgres_pool"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
roxmltree = "0.13.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1"
chrono = {version = "0.4.15", features = ["serde"]}

[[bin]]
name = "import-osm-data"
path = "src/import_osm_data.rs"

[[bin]]
name = "import-game-data"
path = "src/import_game_data.rs"